# ft_printf

./: CMakeLists.txt  Makefile  a.out  check.c  floats.c  ft_printf.c  ft_printf.h  main.c  numbers.c  printf  types.c  utils.c
includes/: ft_printf.h  ft_printf.h.gch
libft/: ft_getlen.c  libft.h  test.c
src/: check.c  display.c  display_f.c  floats.c  ft_printf.c  numbers.c  print.c  spec.c  total.c  type_x.c  types.c  types_douf.c  types_scp.c  utils.c  utils_f.c
test/: main.c
